--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Local Turístico</title>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
   <div id="page">
     <main>
-      <p class="subtitle">Sua próxima viagem:</p>
+      <span class="subtitle">Sua próxima viagem:</span>
       <h1>Conheça Busan</h1>
       <section id="busan-image">
         <img src="assets/image-1.jpg" alt="Busan">
@@ -20,7 +23,7 @@
 
 
       <section id="list">
-        <p class="subtitle">Para os amantes de história</p>
+        <span class="subtitle">Para os amantes de história</span>
         <h2>Descubra 3 destinos imperdíveis em Busan</h2>
         <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
           Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
@@ -29,18 +32,33 @@
             <img src="assets/image-2.jpg" alt="Imagem do Templo Haedong Younggungsa">
             <h3>1. Templo Haedong Younggungsa</h3>
             <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.</p>
+
+            <span class="indication">Bom para:</span>
+            <ul>
+              <li class="history">História</li>
+            </ul>
           </div>
 
           <div id="list-2">
             <img src="assets/image-3.jpg" alt="Templo">
             <h3>2. Templo Beomeo-sa</h3>
             <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+            <span class="indication">Bom para:</span>
+            <ul>
+                <li class="history">História</li>
+            </ul>
           </div>
 
           <div id="list-3">
             <img src="assets/image-4.jpg" alt="">
             <h3>3. Parque Yongdusan</h3>
             <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+            <span class="indication">Bom para:</span>
+            <ul>
+              <li class="casals">Casais</li>
+              <li class="family">Family</li>
+              <li class="money">Orçamento</li>
+            </ul>
           </div>
           <hr>
 
