--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
 
           <div id="list-2">
-            <img src="assets/image-3.jpg" alt="Templo">
+            <img src="assets/image-3.jpg" alt="Imagem do Templo Beomeo-sa">
             <h3>2. Templo Beomeo-sa</h3>
             <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
             <span class="indication">Bom para:</span>
@@ -50,13 +50,13 @@
           </div>
 
           <div id="list-3">
-            <img src="assets/image-4.jpg" alt="">
+            <img src="assets/image-4.jpg" alt="Imagem do Parque Yongdusan">
             <h3>3. Parque Yongdusan</h3>
             <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
             <span class="indication">Bom para:</span>
             <ul>
               <li class="casals">Casais</li>
-              <li class="family">Family</li>
+              <li class="family">Familias</li>
               <li class="money">Orçamento</li>
             </ul>
           </div>
